--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "connect-redis": "^3.3.3",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0"
   }
 }
